# notem

./: .gitignore  Cargo.toml  Makefile  README.md  notem
.github/workflows/: test.yml
rust/src/: config.rs  dir.rs  lib.rs  list.rs  main.rs  open.rs  search.rs
src/: config.rs  dir.rs  lib.rs  main.rs  open.rs
